# red-phosphorus

./: .clippy.toml  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  Structure.drawio  justfile
.github/ISSUE_TEMPLATE/: bug_report.md  parity-issue.md  performance-issue.md
.github/workflows/: rust-fmt.yml  rust.yml
docs/: Structure.drawio  package-lock.json
phos-core/: Cargo.toml
phos-core/src/: lib.rs  world.rs
phos-core/src/block/: entity.rs  mod.rs  redstone.rs
phos-version/: Cargo.toml
phos-version/src/: lib.rs
red-phosphorus/: Cargo.toml
red-phosphorus/src/: lib.rs
src/: lib.rs  utils.rs  version.rs  world.rs
src/block/: entity.rs  mod.rs  redstone.rs
src/compiler/: full.rs  graph.rs  mod.rs
src/compiler/graph/: link_nodes.rs  make_nodes.rs  mod.rs
src/compiler/optimization/: combine.rs  links.rs  mod.rs
src/error/: compiler.rs  mod.rs
src/types/: compiler.rs  contraption.rs  mod.rs  world.rs
src/types/block/: entity.rs  mod.rs  redstone.rs
src/utils/: blockentity.rs  compiler.rs  complier.rs  components.rs  mod.rs  test.rs
src/utils/tests/: compiler.rs  mod.rs
src/version/: mod.rs
tech-mc-docs/: Compiler.canvas  README.md  Redstone + Mc.canvas  docusaurus.config.js
tech-mc-docs/blog/: authors.yml
tech-mc-docs/docs/: intro.md  mods.md
tech-mc-docs/docs/technical-mc/: _category_.json  tick.md
tech-mc-docs/src/pages/: index.js  index.module.css
