[package]
name = "red-phosphorus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
petgraph = "0.6.3"
mini-moka = "0.10.0"

[dev-dependencies]
rand = "0.8.5"
test-case = "3.1.0"

[features]
default = ["1_19"]
1_19 = []
